# SEO-Content-Optimization

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
docs/: mcp_usage.md
public/: app.js  index.html  styles.css
src/seo_content_optimizer/: __init__.py  ai_addons.py  analysis.py  block_rewriter.py  change_summary.py  claim_validator.py  cli.py  config.py  content_sources.py  diff_highlighter.py  diff_markers.py  docx_writer.py  enforcement.py  factuality_guardrails.py  filename_generator.py  firecrawl_client.py  highlight_integrity.py  keyword_filter.py  keyword_loader.py  keyword_selector.py  llm_client.py  locked_tokens.py  models.py  optimizer.py  optimizer_v2.py  output_validator.py  page_archetype.py  prioritizer.py  repetition_guard.py  semantic_analysis.py  structure_preservation.py  text_repair.py
tests/: __init__.py  conftest.py  test_analysis.py  test_brand_prioritizer.py  test_bulk_optimization.py  test_cellgate_regression.py  test_config_and_ai_addons.py  test_content_sources.py  test_diff_markers.py  test_docx_writer.py  test_enforcement.py  test_filename_generator.py  test_highlight_integrity.py  test_insert_only_mode.py  test_keyword_filter.py  test_keyword_loader.py  test_llm_client.py  test_manual_keywords.py  test_output_validator.py  test_quality_gates.py  test_seo_framework.py  test_v2_architecture.py
tests/fixtures/: enhancing_property_security_optimized_raw.txt  enhancing_property_security_original.txt
